--- a/rapporter/Better Thesis/myrefs.bib
+++ b/rapporter/Better Thesis/myrefs.bib
@@ -1,17 +1,10 @@
 @inproceedings{forensic_identification,
-	author    = "Spaun N.A., Bruegge R.W.V.",
-	title     = "Forensic identification of people from images and video",
-	booktitle = "Biometrics: Theory, Applications and Systems",
-	%editor   = "",
-	%volume   = "",
-	%number   = "",
-	%series   = "",
-	%pages    = "",
-	%address  = "",
-	year      = "2008",
-	%month    = "",
-	%publisher= "",
-	%note     = "",
+title={Forensic identification of people from images and video},
+author={Spaun, Nicole A and Bruegge, Richard W Vorder},
+booktitle={Biometrics: Theory, Applications and Systems, 2008. BTAS 2008. 2nd IEEE International Conference on},
+pages={1--4},
+year={2008},
+organization={IEEE}
 }
 
 @article{automatic_detector_2015,
@@ -295,7 +288,7 @@
 	publisher={Elsevier}
 }
 
-@inproceedings{svm_marks,
+@inproceedings{torso_RPPVSM,
 	title={Automated identification of relatively permanent pigmented or vascular skin marks (RPPVSM)},
 	author={Nurhudatiana, Arfika and Kong, Adams Wai-Kin and Altieri, Lisa and Craft, Noah},
 	booktitle={2013 IEEE International Conference on Acoustics, Speech and Signal Processing},
@@ -364,4 +357,299 @@
 	pages={120--126},
 	year={2000},
 	publisher={M AND T PUBLISHING INC}
+}
+
+@article{facedetection_LBP,
+	title={Face description with local binary patterns: Application to face recognition},
+	author={Ahonen, Timo and Hadid, Abdenour and Pietikainen, Matti},
+	journal={IEEE transactions on pattern analysis and machine intelligence},
+	volume={28},
+	number={12},
+	pages={2037--2041},
+	year={2006},
+	publisher={IEEE}
+}
+
+@article{pedestrian_detection,
+	title={A multilevel mixture-of-experts framework for pedestrian classification},
+	author={Enzweiler, Markus and Gavrila, Dariu M},
+	journal={IEEE Transactions on Image Processing},
+	volume={20},
+	number={10},
+	pages={2967--2979},
+	year={2011},
+	publisher={IEEE}
+}
+@inproceedings{vehicle_hog,
+	title={A two-stage approach to people and vehicle detection with hog-based svm},
+	author={Han, Feng and Shan, Ying and Cekander, Ryan and Sawhney, Harpreet S and Kumar, Rakesh},
+	booktitle={Performance Metrics for Intelligent Systems 2006 Workshop},
+	pages={133--140},
+	year={2006},
+	organization={Citeseer}
+}
+
+@inproceedings{reliable_mole,
+	title={A reliable skin mole localization scheme},
+	author={Cho, Taeg Sang and Freeman, William T and Tsao, Hensin},
+	booktitle={2007 IEEE 11th International Conference on Computer Vision},
+	pages={1--8},
+	year={2007},
+	organization={IEEE}
+}
+
+@article{gist_descriptor,
+	title={Contextual guidance of eye movements and attention in real-world scenes: the role of global features in object search.},
+	author={Torralba, Antonio and Oliva, Aude and Castelhano, Monica S and Henderson, John M},
+	journal={Psychological review},
+	volume={113},
+	number={4},
+	pages={766},
+	year={2006},
+	publisher={American Psychological Association}
+}
+
+@article{torso_mole,
+	title={Counting moles automatically from back images},
+	author={Lee, Tim K and Atkins, M Stella and King, Michael A and Lau, Savio and McLean, David I},
+	journal={IEEE Transactions on Biomedical Engineering},
+	volume={52},
+	number={11},
+	pages={1966--1969},
+	year={2005},
+	publisher={IEEE}
+}
+
+@inproceedings{tattoos,
+	title={Detecting and classifying scars, marks, and tattoos found in the wild},
+	author={Heflin, Brian and Scheirer, Walter and Boult, Terrance E},
+	booktitle={Biometrics: Theory, Applications and Systems (BTAS), 2012 IEEE Fifth International Conference on},
+	pages={31--38},
+	year={2012},
+	organization={IEEE}
+}
+
+@article{face_matching,
+	title={Face matching and retrieval using soft biometrics},
+	author={Park, Unsang and Jain, Anil K},
+	journal={IEEE Transactions on Information Forensics and Security},
+	volume={5},
+	number={3},
+	pages={406--415},
+	year={2010},
+	publisher={IEEE}
+}
+
+@inproceedings{hog_dalal,
+	title={Histograms of oriented gradients for human detection},
+	author={Dalal, Navneet and Triggs, Bill},
+	booktitle={Computer Vision and Pattern Recognition, 2005. CVPR 2005. IEEE Computer Society Conference on},
+	volume={1},
+	pages={886--893},
+	year={2005},
+	organization={IEEE}
+}
+
+
+@article{pre_hog,
+	title={Texture features based on texture spectrum},
+	author={He, Dong-Chen and Wang, Li},
+	journal={Pattern Recognition},
+	volume={24},
+	number={5},
+	pages={391--399},
+	year={1991},
+	publisher={Elsevier}
+}
+
+@inproceedings{ojala_hog,
+	title={Performance evaluation of texture measures with classification based on Kullback discrimination of distributions},
+	author={Ojala, Timo and Pietikainen, Matti and Harwood, David},
+	booktitle={Pattern Recognition, 1994. Vol. 1-Conference A: Computer Vision \& Image Processing., Proceedings of the 12th IAPR International Conference on},
+	volume={1},
+	pages={582--585},
+	year={1994},
+	organization={IEEE}
+}
+
+@misc{hsv_color,
+	title={Computer graphics: principles and practice},
+	author={Carter, Matthew P},
+	year={1997},
+	publisher={Wiley Online Library}
+}
+
+@article{griffin2006optimality,
+	title={Optimality of the basic colour categories for classification},
+	author={Griffin, Lewis D},
+	journal={Journal of the Royal Society Interface},
+	volume={3},
+	number={6},
+	pages={71--85},
+	year={2006},
+	publisher={The Royal Society}
+}
+
+@inproceedings{hofmann1999probabilistic,
+	title={Probabilistic latent semantic indexing},
+	author={Hofmann, Thomas},
+	booktitle={Proceedings of the 22nd annual international ACM SIGIR conference on Research and development in information retrieval},
+	pages={50--57},
+	year={1999},
+	organization={ACM}
+}
+
+@article{barnard2003matching,
+	title={Matching words and pictures},
+	author={Barnard, Kobus and Duygulu, Pinar and Forsyth, David and Freitas, Nando de and Blei, David M and Jordan, Michael I},
+	journal={Journal of machine learning research},
+	volume={3},
+	number={Feb},
+	pages={1107--1135},
+	year={2003}
+}
+
+@article{bishop2006pattern,
+	title={Pattern recognition},
+	author={Bishop, Christopher M},
+	journal={Machine Learning},
+	volume={128},
+	year={2006}
+}
+
+@article{blum1997selection,
+	title={Selection of relevant features and examples in machine learning},
+	author={Blum, Avrim L and Langley, Pat},
+	journal={Artificial intelligence},
+	volume={97},
+	number={1},
+	pages={245--271},
+	year={1997},
+	publisher={Elsevier}
+}
+
+@article{loh2011classification,
+	title={Classification and regression trees},
+	author={Loh, Wei-Yin},
+	journal={Wiley Interdisciplinary Reviews: Data Mining and Knowledge Discovery},
+	volume={1},
+	number={1},
+	pages={14--23},
+	year={2011},
+	publisher={Wiley Online Library}
+}
+
+@article{keller1985fuzzy,
+	title={A fuzzy k-nearest neighbor algorithm},
+	author={Keller, James M and Gray, Michael R and Givens, James A},
+	journal={IEEE transactions on systems, man, and cybernetics},
+	number={4},
+	pages={580--585},
+	year={1985},
+	publisher={IEEE}
+}
+
+@article{kohonen1988introduction,
+	title={An introduction to neural computing},
+	author={Kohonen, Teuvo},
+	journal={Neural networks},
+	volume={1},
+	number={1},
+	pages={3--16},
+	year={1988},
+	publisher={Elsevier}
+}
+
+@article{cortes1995support,
+	title={Support-vector networks},
+	author={Cortes, Corinna and Vapnik, Vladimir},
+	journal={Machine learning},
+	volume={20},
+	number={3},
+	pages={273--297},
+	year={1995},
+	publisher={Springer}
+}
+
+@article{vapnik1963pattern,
+	title={Pattern recognition using generalized portrait method},
+	author={Vapnik, Vladimir},
+	journal={Automation and remote control},
+	volume={24},
+	pages={774--780},
+	year={1963}
+}
+
+@incollection{yu2012svm,
+	title={Svm tutorial—classification, regression and ranking},
+	author={Yu, Hwanjo and Kim, Sungchul},
+	booktitle={Handbook of Natural computing},
+	pages={479--506},
+	year={2012},
+	publisher={Springer}
+}
+
+@inproceedings{boser1992training,
+	title={A training algorithm for optimal margin classifiers},
+	author={Boser, Bernhard E and Guyon, Isabelle M and Vapnik, Vladimir N},
+	booktitle={Proceedings of the fifth annual workshop on Computational learning theory},
+	pages={144--152},
+	year={1992},
+	organization={ACM}
+}
+
+@article{vert2004primer,
+	title={A primer on kernel methods},
+	author={Vert, Jean-Philippe and Tsuda, Koji and Sch{\"o}lkopf, Bernhard},
+	journal={Kernel Methods in Computational Biology},
+	pages={35--70},
+	year={2004},
+	publisher={Cambridge, MA: MIT Press}
+}
+
+@article{sokolova2009systematic,
+	title={A systematic analysis of performance measures for classification tasks},
+	author={Sokolova, Marina and Lapalme, Guy},
+	journal={Information Processing \& Management},
+	volume={45},
+	number={4},
+	pages={427--437},
+	year={2009},
+	publisher={Elsevier}
+}
+
+@inproceedings{FRGC,
+	title={Overview of the face recognition grand challenge},
+	author={Phillips, P Jonathon and Flynn, Patrick J and Scruggs, Todd and Bowyer, Kevin W and Chang, Jin and Hoffman, Kevin and Marques, Joe and Min, Jaesik and Worek, William},
+	booktitle={Computer vision and pattern recognition, 2005. CVPR 2005. IEEE computer society conference on},
+	volume={1},
+	pages={947--954},
+	year={2005},
+	organization={IEEE}
+}
+
+@Article{dlib09,
+	author = {Davis E. King},
+	title = {Dlib-ml: A Machine Learning Toolkit},
+	journal = {Journal of Machine Learning Research},
+	year = {2009},
+	volume = {10},
+	pages = {1755-1758},
+}
+
+@book{MATLAB:2010,
+	year = {2010},
+	author = {MATLAB},
+	title = {version 7.10.0 (R2010a)},
+	publisher = {The MathWorks Inc.},
+	address = {Natick, Massachusetts}
+}
+
+@incollection{li2001generalized,
+	title={Generalized homogeneous coordinates for computational geometry},
+	author={Li, Hongbo and Hestenes, David and Rockwood, Alyn},
+	booktitle={Geometric Computing with Clifford Algebras},
+	pages={27--59},
+	year={2001},
+	publisher={Springer}
 }
