--- a/rapporter/Better Thesis/notation.tex
+++ b/rapporter/Better Thesis/notation.tex
@@ -1,14 +1,28 @@
 \begin{notation}% Passing the option "old" to the notation environment will redefine the notationtabular environment so that it produces an old style LaTeX tabular instead of a ctable.sty style tabular.
   \centering
 
-%  \begin{notationtabular}{Några mängder}{Notation}{Betydelse}
-%    $\naturals$ & Mängden av naturliga tal \\
-%    $\reals$ & Mängden av reella tal \\
-%    $\complexes$ & Mängden av komplexa tal \\
-%  \end{notationtabular}
-%
-%  \begin{notationtabular}{Förkortningar}{Förkortning}{Betydelse}
-%    \abbrARMA\index{ARMA@\abbrARMA!abbreviation} & Auto-regressive moving average \\
-%    \abbrPID\index{PID@\abbrPID!abbreviation} & Proportional, integral, differential (regulator) \\
-%  \end{notationtabular}
+\begin{notationtabular}{Mathematical expression}{Notation}{Meaning}
+    $*$ & Convolution  \\
+    $\bullet$ & Dot product   \\
+    $\norm{a}$ & Norm of a vector    \\
+    $\hat{a}$ & Normalized vector   \\
+    $a^T$ & Transpose of a vector   \\
+    $\text{round}(x)$ & Rounds x to nearest integer    \\
+\end{notationtabular}
+
+\begin{notationtabular}{Abbreviations}{Abbreviation}{Meaning}
+NFC & National Forensic Centre \\
+RPPVSM & Relatively Permanent Pigmented or Vascular Skin Marks \\
+HOG & Histogram of Oriented Gradients \\
+LBP & Local Binary Patterns\\
+LoG & Laplacian of Gaussian \\
+RGB & Red Green Blue\\
+HSV & Hue Saturation Value\\
+LRSR & Light Random Sprays Retinex \\
+FRS & Fast Radial Symmetry \\
+RBF & Radial Basis Function \\
+
+
+  %  \abbrPID\index{PID@\abbrPID!abbreviation} & Proportional, integral, differential (regulator) \\
+  \end{notationtabular}
 \end{notation}
