--- a/rapporter/Planering/Main.tex
+++ b/rapporter/Planering/Main.tex
@@ -4,6 +4,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{csquotes}
 \usepackage{cleveref}
+%\usepackage[section]{placeins}
 %\usepackage{biblatex}
 
 
